test/fixtures/errors/module-level-throw-error-loader.js
throw new Error("this is a thrown error from module level");
